    multiple terms per definition.
  - #478: Added :rst:dir:`py:decorator` directive to describe decorators.
  - C++ domain now supports array definitions.
  - C++ domain now supports doc fields (``:param x:`` inside directives).
  - Section headings in :rst:dir:`only` directives are now correctly
    handled.
  - Added ``emphasize-lines`` option to source code directives.

* HTML builder:

  - Added ``pyramid`` theme.
  - #559: :confval:`html_add_permalinks` is now a string giving the
    text to display in permalinks.
  - #259: HTML table rows now have even/odd CSS classes to enable
    "Zebra styling".
  - #554: Add theme option ``sidebarwidth`` to the basic theme.

* Other builders:

  - #516: Added new value of the :confval:`latex_show_urls` option to
    show the URLs in footnotes.
  - #209: Added :confval:`text_newlines` and :confval:`text_sectionchars`
    config values.
  - Added :confval:`man_show_urls` config value.
  - #472: linkcheck builder: Check links in parallel, use HTTP HEAD
    requests and allow configuring the timeout.  New config values:
    :confval:`linkcheck_timeout` and :confval:`linkcheck_workers`.
  - #521: Added :confval:`linkcheck_ignore` config value.
  - #28: Support row/colspans in tables in the LaTeX builder.

* Configuration and extensibility:

  - #537: Added :confval:`nitpick_ignore`.
  - #306: Added :event:`env-get-outdated` event.
  - :meth:`.Application.add_stylesheet` now accepts full URIs.

* Autodoc:

  - #564: Add :confval:`autodoc_docstring_signature`.  When enabled (the
    default), autodoc retrieves the signature from the first line of the
    docstring, if it is found there.
  - #176: Provide ``private-members`` option for autodoc directives.
  - #520: Provide ``special-members`` option for autodoc directives.
  - #431: Doc comments for attributes can now be given on the same line
    as the assignment.
  - #437: autodoc now shows values of class data attributes.